@@ -46,12 +46,23 @@ dependencies {
     }
     implementation('org.kordamp.ikonli:ikonli-javafx:12.3.1')
 
+    testImplementation("io.mockk:mockk:1.13.5")
+    testImplementation("io.kotest:kotest-assertions-core:5.6.2")
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
 }
 
 test {
     useJUnitPlatform()
+
+    moduleOptions {
+        runOnClasspath = true
+    }
+
+    jvmArgs = ['--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+               '--add-opens', 'java.base/java.util=ALL-UNNAMED',
+               '--add-exports', 'java.base/jdk.internal.module=ALL-UNNAMED'
+    ]
 }
 
 jlink {
